# VoxelEngine

./: Cargo.toml  LICENSE  README.md  voxel_export.glb  voxel_export.mtl
src/: chunk.rs  lib.rs  main.rs  mesh.rs  mesher.rs  world.rs
voxel_core/: Cargo.toml
voxel_core/src/: brush.rs  chunk.rs  export.rs  face.rs  gltf_io.rs  lib.rs  persistence.rs  raycast.rs  sd  voxel.rs
voxel_viewer/: Cargo.toml
voxel_viewer/src/: main.rs
voxel_viewer/src/shaders/: shader.wgsl
