[package]
name = "voxel_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
voxel_core = { path = "../voxel_core" }
wgpu = "22"
winit = "0.30"
pollster = "0.3"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
gltf = "1.4"
gltf-json = "1.4"
rfd = "0.14"